Further additions to the Dot product SIMD tests